# junior_design

./: .gitignore  README.md
case/: back.gcode  bottom.gcode  case.FCStd  case.FCStd1  front.gcode  right.gcode
misc/: bolt_small.xcf  logo.xcf
pcb/jd_timer/: _autosave-file60AE680B.sch  _autosave-file60AEB6EE.sch  fp-info-cache  fp-lib-table  jd_timer-cache.lib  jd_timer.kicad_pcb  jd_timer.kicad_pcb-bak  jd_timer.net  jd_timer.pro  jd_timer.sch-bak  sym-lib-table  timer_custom.bck  timer_custom.dcm  timer_custom.lib
pcb/jd_timer/extra_components/extra.pretty/: 1043.kicad_mod  PKLCS1212E2000-R1.kicad_mod  PTV09.kicad_mod  logo.kicad_mod
src/jd_timer/: Cargo.toml  openocd.cfg
src/jd_timer/.cargo/: config
src/jd_timer/src/: beep.rs  buttons.rs  charge.rs  config.rs  logo.rs  main.rs  pot.rs  rtc.rs  rtc_util.rs  states.rs  types.rs  ui.rs
src/jd_timer/src/bitmaps/: bigbolt.rs  logo.rs  smallbolt.rs
