[package]
name = "jd_timer"
version = "0.1.0"
authors = ["fountainman <liakhova@oregonstate.edu>"]
edition = "2018"

[dependencies]
#cortex-m = "0.6.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
#cortex-m-rtic = { version= "0.5.5"}
#cortex-m-rtic = { git = "https://github.com/rtic-rs/cortex-m-rtic.git"}
cortex-m-rtic = "0.6.0-alpha.2"
#cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
#panic-semihosting = "0.5.4"
usb-device = {version = "0.2.8"}
stm32f1xx-hal = {version="0.7.0", features = ["rt", "stm32f103"]}
# usbd-midi = { version= "0.2.0" }
embedded-hal = "0.2.5"
ssd1306 = "0.5.2"
embedded-graphics = "0.6.2"
profont = "0.4.0"
heapless = "0.5.6"

# this lets you use `cargo fix`!
[[bin]]
name = "jd_timer"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # better optimizations apparently

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # better optimizations apparently